<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="#1481e9" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/setting"
            android:textColor="#ffffff"
            android:textSize="18sp" />
        
        <ImageView
            android:id="@+id/setting_img_back"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/selector_btn_back" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:orientation="horizontal"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:focusable="true"
        android:focusableInTouchMode="true" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/single_word_time"
            android:textColor="#000000"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/setting_edit_time"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_gravity="bottom"
            android:hint="@string/single_word_hint"
            android:textColor="#000000"
            android:textSize="16sp"
            android:inputType="number" />
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_gravity="center_vertical"
            android:text="@string/play_random"
            android:textColor="#000000"
            android:textSize="16sp" />

        <CheckBox
            android:id="@+id/setting_cb_play_random"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:button="@null"
            android:checked="false"
            android:drawableLeft="@drawable/selector_switch" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_gravity="center_vertical"
            android:text="@string/stop_after_allplay"
            android:textColor="#000000"
            android:textSize="16sp" />

        <CheckBox
            android:id="@+id/setting_cb_play_stop"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:button="@null"
            android:checked="false"
            android:drawableLeft="@drawable/selector_switch" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_gravity="center_vertical"
            android:text="@string/windowmanager_go_edge"
            android:textColor="#000000"
            android:textSize="16sp" />

        <CheckBox
            android:id="@+id/setting_cb_wm_go_edge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:button="@null"
            android:checked="false"
            android:drawableLeft="@drawable/selector_switch" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_gravity="center_vertical"
            android:text="@string/is_ouludict_google"
            android:textColor="#000000"
            android:textSize="16sp" />

        <CheckBox
            android:id="@+id/setting_cb_ouludict_google"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:button="@null"
            android:checked="false"
            android:drawableLeft="@drawable/selector_switch" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_gravity="center_vertical"
            android:text="@string/is_show_notify_new"
            android:textColor="#000000"
            android:textSize="16sp" />

        <CheckBox
            android:id="@+id/setting_cb_show_notify_new"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:button="@null"
            android:checked="false"
            android:drawableLeft="@drawable/selector_switch" />
    </RelativeLayout>

</LinearLayout>
